# stack-tail

./: .travis.yml  Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: rust.yml
src/: main.rs
