[package]
name = "stack-tail"
version = "0.0.1"
authors = ["softprops <d.tangren@gmail.com>"]
edition = "2018"

[dependencies]
console = "0.7"
chrono = "0.4"
chrono-tz = "0.6"
colored = "1.8"
futures = "0.1"
rusoto_cloudformation = "0.40"
rusoto_core = "0.40"
structopt = "0.2"
tabwriter = "1.1"
tokio = "0.1"
